HTML Practice 채점

--- a/HTML/practiceHTML.html
+++ b/HTML/practiceHTML.html
@@ -33,7 +33,8 @@
     <input type="password" minlength="6" maxlength="20" placeholder="비밀번호를 입력해주세요">
   </div>
   <div>
-    <table>
+    <h2>주식회사 HTML 매출</h2>
+    <table border="1"> <!--border 속성 지정하면됨-->
       <thead>
         <tr>
           <th rowspan="2">/</th>
@@ -70,7 +71,8 @@
     </table>
   </div>
   <div>
-    &#8747;<sub>0</sub><sup><var>t</var></sup>2<sup>5</sup>x<i>log</i><sub>2</sub>x
+    &#8747;<sub>0</sub><sup><var>t</var></sup>2<sup>5</sup>x<var>log</var><sub>2</sub><b>x</b>
+  <!--log는 var 태그, <i>∫</i>-->
   </div>
 </body>
 </html>
