--- a/CSS/grid/grid.html
+++ b/CSS/grid/grid.html
@@ -41,5 +41,10 @@
     <div class="content">8</div>
     <div class="content">9</div>
   </div>
+  <div class="grid-row">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+  </div>
 </body>
 </html>
