--- a/CSS/practiceCSS.html
+++ b/CSS/practiceCSS.html
@@ -15,6 +15,47 @@
     <span>회원가입</span>
     <span>마이페이지</span>
   </div>
+  <div class="grid">
+    <img src="https://play-lh.googleusercontent.com/ccWDU4A7fX1R24v-vvT480ySh26AYp97g1VrIB_FIdjRcuQB2JP2WdY7h_wVVAeSpg=s180-rw
+    " alt="facebook">
+    <img src="https://play-lh.googleusercontent.com/h9jWMwqb-h9hjP4THqrJ50eIwPekjv7QPmTpA85gFQ10PjV02CoGAcYLLptqd19Sa1iJ=s180-rw
+    " alt="instagram">
+    <img src="https://play-lh.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd=s180-rw
+    " alt="kakaotalk">
+    <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU=s180-rw" alt="github">
+    <img src="https://play-lh.googleusercontent.com/lMoItBgdPPVDJsNOVtP26EKHePkwBg-PkuY9NOrc-fumRtTFP4XhpUNk_22syN4Datc=s180-rw" alt="youtube">
+    <img src="https://play-lh.googleusercontent.com/eN0IexSzxpUDMfFtm-OyM-nNs44Y74Q3k51bxAMhTvrTnuA4OGnTi_fodN4cl-XxDQc=s180-rw
+    " alt="icon">
+    <img src="https://play-lh.googleusercontent.com/z5nin1RdQ4UZhv6fa1FNG7VE33imGqPgC4kKZIUjgf_up7E-Pj3AaojlMPwNNXaeGA=s180-rw" alt="tictok">
+  </div>
+  <div class="samsung">
+    <header class="header">
+      <h1 id="title">삼성전자</h1>
+      <p id="code">종목코드: 005930</p>
+    </header>
+    <main>
+      <h2>회사소개</h2>
+      <p>한국 및 CE, IM부문 해외 9개 지역총괄과 DS부문 해외 5개 지역총괄,
+        Harman 등 241개의 종속기업으로 구성된 글로벌 전자기업임. 세트사업에는
+        TV, 냉장고 등을 생산하는 CE부문과 스마트폰, 네트워크시스템, 컴퓨터
+        등을 생산하는 IM부문이 있음. 부품사업(DS부문)에서는 D램, 낸드 플래쉬,
+        모바일AP 등의 제품을 생산하는 반도체 사업과 TFT-LCD 및 OLED 디스플레이
+        패널을 생산하는 DP사업으로 구성됨.</p>
+      <h2>시가총액 순위</h2>
+      <ol>
+        <li>삼성전자</li>
+        <li>SK하이닉스</li>
+        <li>NAVER</li>
+        <li>카카오</li>
+        <li>삼성바이오로직스</li>
+        <li>삼성전자우</li>
+        <li>삼성SDI</li>
+        <li>LG화학</li>
+        <li>현대차</li>
+        <li>셀트리온</li>
+      </ol>
+    </main>
+  </div>
 </body>
 </body>
 </html>
