--- a/CSS/practiceCSS.html
+++ b/CSS/practiceCSS.html
@@ -9,12 +9,15 @@
 </head>
 <body>
   <div class="content"></div>
+  <!--메뉴니까 nav태그 사용하기-->
+  <!--제목이랑 나머지를 class로 구분했으면 좋았을 듯-->
   <div class="navigation">
     <span>네카라쿠배</span>
     <span>로그인</span>
     <span>회원가입</span>
     <span>마이페이지</span>
   </div>
+  <!--이미지 하나하나를 div로 묶어도됨-->
   <div class="grid">
     <img src="https://play-lh.googleusercontent.com/ccWDU4A7fX1R24v-vvT480ySh26AYp97g1VrIB_FIdjRcuQB2JP2WdY7h_wVVAeSpg=s180-rw
     " alt="facebook">
@@ -29,10 +32,11 @@
     <img src="https://play-lh.googleusercontent.com/z5nin1RdQ4UZhv6fa1FNG7VE33imGqPgC4kKZIUjgf_up7E-Pj3AaojlMPwNNXaeGA=s180-rw" alt="tictok">
   </div>
   <div class="samsung">
+    <!--section info 와 rank를 main과 aside로. 시맨틱 태그 잘 활용하기-->
     <section title="info">
     <header class="header">
       <h1 id="title">삼성전자</h1>
-      <p id="code">종목코드: 005930</p>
+      <p id="code">종목코드: 005930</p> <!--span사용-->
     </header>
       <h2>회사소개</h2>
       <p>한국 및 CE, IM부문 해외 9개 지역총괄과 DS부문 해외 5개 지역총괄,
